--- a/ola.html
+++ b/ola.html
@@ -9,16 +9,16 @@
     <script type="text/javascript" src="OLA.js"></script>
     <script type="text/javascript">
       var context = new AudioContext();
-      var BUFFER_SIZE = 1024;
-      var FRAME_SIZE  = 1024;
+      var BUFFER_SIZE = 4096;
+      var FRAME_SIZE  = 4096;
       var node = context.createScriptProcessor(BUFFER_SIZE, 2);
       var olaL = new OLATS(FRAME_SIZE);
       var olaR = new OLATS(FRAME_SIZE);
       var buffer;
       var position = 0;
       var alpha = 1;
-      var overlap = 2.2;
-      var beta = 15;
+      var overlap = 1.05;
+      var beta = 1;
       var outBufferL = [];
       var outBufferR = [];
 
@@ -39,18 +39,11 @@
                       var bufL = buffer.getChannelData(0).subarray(position, position + FRAME_SIZE);
                       var bufR = buffer.getChannelData(1).subarray(position, position + FRAME_SIZE);
 
-                      var a = alpha;
-                      var o = overlap;
-                      var b = beta;
-
-                      olaL.set_overlap(o);
-                      olaR.set_overlap(o);
-
-                      olaL.set_beta(b);
-                      olaR.set_beta(b);
-
-                      olaL.set_alpha(a);
-                      olaR.set_alpha(a);
+                      if (alpha) {
+                        olaL.set_alpha(alpha);
+                        olaR.set_alpha(alpha);
+                        alpha = undefined;
+                      }
 
                       outBufferL = outBufferL.concat(olaL.process(bufL));
                       outBufferR = outBufferR.concat(olaR.process(bufR));
@@ -73,8 +66,21 @@
           request.send();
       };
 
-      loadSample('http://localhost/soundtouchjs/2.mp3');
+      loadSample('http://localhost/soundtouchjs/4.mp3');
 
+      function set_beta(newBeta) {
+        olaL.set_beta(newBeta);
+        olaR.set_beta(newBeta);
+      }
+
+      function set_overlap(newOverlap) {
+        olaL.set_overlap(newOverlap);
+        olaR.set_overlap(newOverlap);
+      }
+
+      function set_alpha(newAlpha) {
+        alpha = newAlpha;
+      }
 
     </script>
   </body>
