--- a/ola2.html
+++ b/ola2.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
 
       var context = new AudioContext();
-      var BUFFER_SIZE = 2048;
+      var BUFFER_SIZE = 4096;
       var FRAME_SIZE  = 4096;
       var node = context.createScriptProcessor(BUFFER_SIZE, 2);
       var buffer;
@@ -125,10 +125,13 @@
 
                       segProc = new SegmentProcessor(buffer, FRAME_SIZE);
 
-                      segProc.add_interval(Math.round(data[0][0]*44100), Math.round(data[0][1]*44100), data[0][2]);
-                      segProc.add_interval(Math.round(data[1][0]*44100), Math.round(data[1][1]*44100), data[1][2]);
-                      segProc.add_interval(Math.round(data[2][0]*44100), Math.round(data[2][1]*44100), data[2][2]);
-                      segProc.add_interval(Math.round(data[3][0]*44100), Math.round(data[3][1]*44100), data[3][2]);
+                      // segProc.add_interval(0, buffer.length-1, 130);
+                      // segProc.add_interval({ start: Math.round(data[0][0]*44100), end: Math.round(data[3][1]*44100), bpm: data[0][2] });
+                      // segProc.add_interval({ start: Math.round(data[0][0]*44100), end: Math.round(data[3][1]*44100), bpm: data[0][2] });
+                      segProc.add_interval({ start: Math.round(data[15][0]*44100), end: Math.round(data[22][1]*44100), bpm: data[15][2] });
+                      segProc.add_interval({ start: Math.round(data[15][0]*44100), end: Math.round(data[22][1]*44100), bpm: data[15][2] });
+
+
 
                       node.onaudioprocess = function(e) {
 
