Fixed an issue with set_current_time

--- a/ola.html
+++ b/ola.html
@@ -70,8 +70,11 @@
       };
 
       // loadSample('http://localhost/soundtouchjs/1.mp3');
+      // loadSample('http://localhost/soundtouchjs/4.mp3');
+      // loadSample('http://localhost/soundtouchjs/7.mp3');
+      loadSample('http://localhost/soundtouchjs/8.mp3');
       // loadSample('http://localhost/soundtouchjs/8.mp3');
-      loadSample('http://localhost/annotator/Daft%20Punk%20-%20Discography%20-%201994-2013/01%20-%20Albums%20(CD%20Original)/2001%20-%20Discovery%20-%20(320%20kbps)/14.%20Too%20Long.mp3');
+      // loadSample('http://localhost/annotator/Daft%20Punk%20-%20Discography%20-%201994-2013/01%20-%20Albums%20(CD%20Original)/2001%20-%20Discovery%20-%20(320%20kbps)/14.%20Too%20Long.mp3');
 
       function set_beta(newBeta) {
         olaL.set_beta(newBeta);
